# comfyui-original-character-generator

./: .gitignore  CONTRIBUTING.md  README.md  README_ja.md  README_ko.md  README_zh-CN.md  SECURITY.md  __init__.py  api.py  generator.py  node_list.json  nodes.py  preset_store.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
data/: accessories.json  base_prompt.json  bust_sizes.json  eye_colors.json  hair_colors.json  hair_styles.json  presets.json
user_presets/: .gitignore  example_soft_violet.json
web/: preset_sync.js
workflows/: OC Generator simple workflow.json  oc-generator-basic-workflow_simple_and_list.json  oc-generator-soft-violet-preset-workflow.json
