[project]
name = "original-character-generator"
description = "ComfyUI custom nodes for generating original character prompts and reusable settings."
version = "1.0.0"
license = { file = "LICENSE" }
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/nade-eaf4fc/comfyui-original-character-generator"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/nade-eaf4fc/comfyui-original-character-generator/wiki"
"Bug Tracker" = "https://github.com/nade-eaf4fc/comfyui-original-character-generator/issues"

[tool.comfy]
PublisherId = "eaf4fc"
DisplayName = "comfyui-original-character-generator"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

